# GodotGlassBridge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/BridgeRuntime/: bridge_utils.hpp
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
project/: icon.svg.import  main.tscn  project.godot
project/addons/glassbridge/: gizmo-example.gd  gizmo.gd  main.gd
res/: plugin.cfg.in
src/: bridge.cpp  bridge.h  gdexample.cpp  gdexample.h  gdglass.cpp  gdglass.h  register_types.cpp  register_types.h
